--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8081
 
 dempjpa.service.createPerson.url =http://localhost:8085/persons/create
+dempjpa.service.deletePerson.url =http://localhost:8085/persons/delete2/
 dempjpa.service.getPerson.url =http://localhost:8085/persons/
 
 dempjpa.service.purposeAll.url =http://localhost:8085/persons/purposeAll/
