--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ dempjpa.service.createPerson.url=http://localhost:8086/persons/create
 dempjpa.service.getPerson.url=http://localhost:8086/persons/
 dempjpa.service.deletePerson.url=http://localhost:8086/persons/delete2/
 
-dempjpa.service.purpose.url=http://localhost:8086/purpose/createbot/
+dempjpa.service.purpose.url=http://localhost:8086/purpose/createBot/
 dempjpa.service.purposeAll.url=http://localhost:8086/persons/purposeAll/
 dempjpa.service.purposestatus.url=http://localhost:8086/purpose/changestatus
 dempjpa.service.purposetime.url=http://localhost:8086/purpose/changetime
