--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ dempjpa.bot.getAccessToken.token=766ac4c16cf9e48ff06601a8a0b86eba6fde634ba19d32b
 dempjpa.bot.getGroupId.id=210604783
 
 dempjpa.service.createPerson.url=http://localhost:8086/persons/create
-dempjpa.service.getPerson.url=http://localhost:8086/persons/
+dempjpa.service.getPerson.url=http://localhost:8086/persons/getPerson/
+dempjpa.service.purposeAll.url=http://localhost:8086/persons/allNotification/
 dempjpa.service.deletePerson.url=http://localhost:8086/persons/delete2/
 
-dempjpa.service.purpose.url=http://localhost:8086/purpose/createBot/
-dempjpa.service.purposeAll.url=http://localhost:8086/persons/purposeAll/
-dempjpa.service.purposestatus.url=http://localhost:8086/purpose/changestatus
-dempjpa.service.purposetime.url=http://localhost:8086/purpose/changetime
-dempjpa.service.purposedelete.url=http://localhost:8086/purpose
+dempjpa.service.purpose.url=http://localhost:8086/notification/createBot/
+dempjpa.service.purposestatus.url=http://localhost:8086/notification/putStatus
+dempjpa.service.purposetime.url=http://localhost:8086/notification/putTime
+dempjpa.service.purposedelete.url=http://localhost:8086/notification/deleteNotification
 
 
 
